tests/NormalTests/paczka2/big_fuzzy/13784497.err
Error in line 7: xulfg5pSo S69N 116,7
Error in line 1: 5y0Z4VdKea S297 63,9
Error in line 19: IAKc3i2S S690 48,8
Error in line 27: j6aL2Q A499 6,0
Error in line 23: IAKc3i2S S366 6,5
Error in line 33: j6aL2Q S297 9,0
Error in line 36: IAKc3i2S S690 3,4
Error in line 39: S297 S297 7,4
Error in line 4: xulfg5pSo S690 32,5
Error in line 54: IAKc3i2S S297 20,41
Error in line 53: IAKc3i2S S366 1,6
Error in line 51: xulfg5pSo S366 87,7
Error in line 68: 5y0Z4VdKea A499 19,2
Error in line 91: 5y0Z4VdKea Sv97 104,5
Error in line 81: S297 S366 14,8
Error in line 100: jLaw S690 88,4
Error in line 73: 1t5EE51 A499 24,8
Error in line 130: S297 A499 90,9
Error in line 144: 1t5EE51 S690 34,4
Error in line 149: S297 S366 98,5
Error in line 151: jLaw A499 61,1
Error in line 167: 1t5EE51 A499 103,7
Error in line 173: 5y0Z4VdKea A499 64,5
Error in line 171: 1t5EE51 S690 82,1
Error in line 137: xulfg5pSo S297 179,3
Error in line 187: 1t5EE51 S366 36,2
Error in line 195: IAKc3i2S S690 66,5
Error in line 184: j6aL2Q S297 297,2
Error in line 181: S297 S297 76,2
Error in line 214: xulfg5pSo S297 74,9
Error in line 218: jLaw S366 64,4
Error in line 238: 1t5EE51 A499 2,2
